Refactoriza la introducción para usar un componente de imagen responsiva.
Se reemplazó la imagen estática con un nuevo componente reutilizable de imagen responsiva que optimiza el uso de imágenes en diferentes tamaños. Esto mejora el rendimiento y la escalabilidad del proyecto. La implementación incluye soporte para múltiples formatos, uso de carga diferida y un diseño accesible y móvil amigable.

---

### [Home]

- Se cambió la imagen estática por el componente `ResponsiveImg`.

  - Se removió el uso de etiquetas `<img>` directas.
  - Se añadió el nuevo componente `ResponsiveImg` con las propiedades adecuadas.
  - Optimización en la presentación para diversas resoluciones.
  - Mejora en la accesibilidad al configurar adecuadamente el atributo `alt`.
  - Eliminación de propiedades redundantes de tamaño anterior.

### [ResponsiveImgComponent]

- Se diseñó un componente de imagen responsiva reutilizable.

  - Incluye un selector personalizado `responsive-img` para integraciones simples.
  - Compatible con `srcset` y múltiples resoluciones para optimización.
  - Implementa carga diferida y decodificación asíncrona.
  - Proporciona un fallback customizable para navegadores no compatibles.
  - Diseño modular con soporte para propiedades configurables.

### [ResponsiveImgComponent.Html]

- Diseño modular del HTML para el componente de imagen responsiva.

  - Uso del elemento `<picture>` para soportar múltiples formatos.
  - Incluye etiquetas `<source>` y `<img>` configuradas para responsividad.
  - Configuración de `loading="lazy"` para mejorar el rendimiento.
  - Compatibilidad con tamaños dinámicos mediante parámetros.
  - Clases de estilo aplicadas para un ajuste visual limpio.

### [ResponsiveImgComponent.Css]

- Se añadió el archivo de estilos para el componente responsivo.

  - Aplicación de clases CSS para ajuste automático e imagen fluida.
  - Configuración de máximo ancho y altura adaptable.
  - Diseño centrado en simplicidad y compatibilidad.
  - Prepara el esti

--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -1,10 +1,9 @@
 <section class="flex flex-col gap-10" id="landing">
   <section class="flex gap-0 lg:gap-10 flex-wrap lg:flex-nowrap" id="introduction">
-    <img alt="Profile Picture"
-         class="w-[460px] h-[280px]"
-         height="280"
-         ngSrc="https://assets.zuzki.dev/public/images/sleepy-zuzki-working.jpg"
-         width="460"/>
+    <responsive-img
+      alt="Icono de Zuzki"
+      name="zuzki-icon/zuzki-icon"
+    ></responsive-img>
 
     <div class="flex flex-row flex-wrap gap-5">
       <div class="w-full text-5xl">
