--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -53,25 +53,6 @@
 
     <p class="mb-3">¡Estoy emocionado por escuchar sobre posibles colaboraciones!</p>
 
-    <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)">
-      <div class="flex flex-col gap-2 w-full md:w-1/2">
-
-        <app-input [(ngModel)]="formData.name"
-                   name="name"
-                   placeholder="Sleepy Zuzki"></app-input>
-
-        <app-input [(ngModel)]="formData.email"
-                   name="email"
-                   placeholder="zuzki@sleepy.com"></app-input>
-
-        <app-textarea [(ngModel)]="formData.message"
-                      [rows]="5"
-                      label="Mensaje"
-                      name="message"
-              placeholder="Escribe tu mensaje aquí"></app-textarea>
-
-        <app-button class="w-full md:w-1/3" type="submit">Enviar</app-button>
-      </div>
-    </form>
+    <app-contact-form (onSubmit)="onSubmit($event)"></app-contact-form>
   </section>
 </section>
