--- a/src/app/features/works/works.feature.html
+++ b/src/app/features/works/works.feature.html
@@ -12,13 +12,16 @@
     </div>
   </header>
 
-  <section class="flex flex-row flex-wrap mt-8 justify-between">
+  <section class="flex flex-row flex-wrap mt-8 gap-3 justify-between">
     @for (project of projects; track project.id) {
-      <app-project-card
-        class="w-[176px]"
-        [project]="project"
-        variant="square">
-      </app-project-card>
+      <a class="w-[176px] no-underline hover:no-underline focus:ring-0 m-0"
+         routerLink="/works/{{ project.id }}">
+        <app-project-card
+          [project]="project"
+          [showDescription]="false"
+          variant="square">
+        </app-project-card>
+      </a>
     }
   </section>
 </section>
