--- a/src/app/shared/components/ui/project-card/project-card.component.html
+++ b/src/app/shared/components/ui/project-card/project-card.component.html
@@ -18,8 +18,11 @@
   <div class="flex flex-col justify-between card-body">
     <div>
       <h3>{{ project.name }}</h3>
-<!--      <p class="w-full">{{ project.year }}</p>-->
-<!--      <p>{{ project.description }}</p>-->
+      <p class="w-full">{{ project.creation_date | date:"yyyy" }}</p>
+
+      @if (showDescription) {
+        <p>{{ project.description }}</p>
+      }
     </div>
 
     @if (buttonText) {
