Refactor form validation and optimize component imports for better maintainability and performance.
Updated conditional checks in ContactFormComponent to simplify validation logic. Removed unused imports in HomeFeature to reduce code clutter and optimize performance.

---

### [ContactFormComponent]

- Simplified the validation logic by removing unnecessary optional chaining in the conditional checks.
  - Addressed validation conditions for the name field.
  - Refined logic for validating the email field.
  - Optimized validation for the message field, ensuring consistency across inputs.

### [HomeFeature]

- Refactored component imports by removing unused InputComponent and TextareaComponent to reduce load.
  - Adjusted import statements to match updated usages.
  - Updated standalone imports list to reflect the changes.

Signed-off-by: Zuzki <sleepy@zuzki.dev>

--- a/src/app/shared/components/forms/contact-form/contact-form.component.html
+++ b/src/app/shared/components/forms/contact-form/contact-form.component.html
@@ -7,7 +7,7 @@
                  placeholder="Sleepy Zuzki">
       </app-input>
 
-      @if (name && name?.invalid && (name.dirty || name?.touched)) {
+      @if (name && name.invalid && (name.dirty || name.touched)) {
         <div class="text-red-500">
           <fa-icon [icon]="faCircleExclamation"/> El nombre no es valido
         </div>
@@ -20,7 +20,7 @@
                  name="email" placeholder="zuzki@sleepy.com">
       </app-input>
 
-      @if (email && email?.invalid && (email.dirty || email?.touched)) {
+      @if (email && email.invalid && (email.dirty || email.touched)) {
         <div class="text-red-500">
           <fa-icon [icon]="faCircleExclamation"/> El correo no es valido
         </div>
@@ -35,7 +35,7 @@
                     placeholder="Escribe tu mensaje aquí" required>
       </app-textarea>
 
-      @if (message && message?.invalid && (message.dirty || message?.touched)) {
+      @if (message && message.invalid && (message.dirty || message.touched)) {
         <div class="text-red-500">
           <fa-icon [icon]="faCircleExclamation"/> El mensaje es requerido
         </div>
