Add CUSTOM_ELEMENTS_SCHEMA and update button structure in ProjectCardComponent
Refactored the ProjectCardComponent to enhance compatibility and improve UI flexibility. Introduced schema additions and updated button behavior, ensuring better usability and design consistency.

---

### [ProjectCardComponent]
General: Updated the component to include custom schemas and revamped button structure for dynamic behavior.

- Added `CUSTOM_ELEMENTS_SCHEMA` for compatibility with externally defined custom elements.
- Enhanced button element with `routerLink` to introduce navigation functionality.
- Updated button text styling using custom child component, `button-text`.
- Incorporated class bindings for managing light/dark theme transitions.

Signed-off-by: Zuzki <sleepy@zuzki.dev>

--- a/src/app/shared/components/ui/project-card/project-card.component.html
+++ b/src/app/shared/components/ui/project-card/project-card.component.html
@@ -26,9 +26,9 @@
     </div>
 
     @if (buttonText) {
-      <app-button
+      <app-button routerLink="/works/{{ project.id }}"
         class="self-start mt-4">
-        {{ buttonText }}
+        <button-text class="text-sleepy-light-text-primary dark:text-sleepy-dark-text-primary">{{ buttonText }}</button-text>
       </app-button>
     }
   </div>
