--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="mt-12 border-t py-8 border-sleepy-light-border dark:border-sleepy-dark-border bg-sleepy-light-bg-surface dark:bg-sleepy-dark-bg-surface">
+<footer class="border-t py-8 border-sleepy-light-border dark:border-sleepy-dark-border bg-sleepy-light-bg-surface dark:bg-sleepy-dark-bg-surface">
   <div class="container mx-auto px-4">
     <div class="flex flex-col md:flex-row justify-between items-center">
       <p class="text-sleepy-light-text-secondary dark:text-sleepy-dark-text-secondary">
