--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,7 +16,7 @@
 <!--        <app-button ariaLabel="Cambiar idioma" variant="secondary">-->
 <!--          🌐-->
 <!--        </app-button>-->
-        <app-button (click)="openMobileMenu()" ariaLabel="Menú móvil" class="md:hidden" variant="secondary">
+        <app-button (click)="openMobileMenu()" ariaLabel="Menú móvil" class="pr-10 md:hidden" variant="secondary">
           ☰
         </app-button>
       </div>
