Update alt attributes and README to provide clearer context and project setup instructions.
Improved the alt attributes in template files to include proper artist credits. Updated the README to streamline project setup details and enhance clarity.

---

### [Home.Feature]
- Added attribution to the artist in the image alt tag.
   - Updated `alt` property of "Zuzki Icon" to include artist credit.

### [About.Feature]
- Enhanced image descriptions with proper artist acknowledgment.
   - Updated alt tags for profile picture and character sheet.
   - Improved format for aesthetic presentation.

### [README]
- Overhauled content for better readability and updated project setup guidelines.
   - Removed redundant sections related to Angular CLI commands.
   - Added detailed installation and setup steps.
   - Clarified prerequisites for correct project configuration.

Signed-off-by: Zuzki <sleepy@zuzki.dev>

--- a/src/app/features/about/about.feature.html
+++ b/src/app/features/about/about.feature.html
@@ -1,6 +1,9 @@
 <section class="flex flex-col gap-10" id="landing">
   <section class="flex gap-0 lg:gap-10 flex-wrap lg:flex-nowrap mb-10" id="about">
-    <img alt="Profile Picture" height="280" ngSrc="https://assets.zuzki.dev/public/images/sleepy-zuzki-working.jpg" width="460"/>
+    <img alt="Zuzki Trabajando, Arte realizado por @AlwaysAlele"
+         height="280"
+         ngSrc="https://assets.zuzki.dev/public/images/sleepy-zuzki-working.jpg"
+         width="460"/>
     <div>
       <h1 class="text-5xl mb-2">Sobre Mi</h1>
       <p>Soy Zuzki, Ingeniero de Software con pasión por crear experiencias accesibles y visualmente atractivas.</p>
@@ -23,7 +26,7 @@
   <section class="mb-10">
     <h2 class="text-4xl mb-2">Hoja de referencia</h2>
     <img [priority]="true"
-         alt="Hoja de personaje de Zuzki"
+         alt="Hoja de personaje de Zuzki, Arte realizado por @Toraberaaa"
          height="934"
          ngSrc="/images/zuzki-sheet/zuzki-sheet-1920.webp"
          width="1920"
