--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col gap-10" id="landing">
   <section class="flex gap-0 lg:gap-10 flex-wrap lg:flex-nowrap" id="introduction">
     <responsive-img
-      alt="Icono de Zuzki"
+      alt="Icono de Zuzki, Arte realizado por @pixelhorn"
       name="zuzki-icon/zuzki-icon"
     ></responsive-img>
 
