--- a/src/app/shared/components/ui/responsive-img/responsive-img.component.html
+++ b/src/app/shared/components/ui/responsive-img/responsive-img.component.html
@@ -9,6 +9,7 @@
     [src]="fallbackSrc"
     class="max-w-full h-auto"
     decoding="async"
-    loading="lazy"
+    fetchpriority="high"
+    loading="eager"
   />
 </picture>
