--- a/src/app/features/home/home.feature.html
+++ b/src/app/features/home/home.feature.html
@@ -1,9 +1,12 @@
 <section class="flex flex-col gap-10" id="landing">
   <section class="flex gap-0 lg:gap-10 flex-wrap lg:flex-nowrap" id="introduction">
-    <responsive-img
-      alt="Icono de Zuzki, Arte realizado por @pixelhorn"
-      name="zuzki-icon/zuzki-icon"
-    ></responsive-img>
+    <img alt="Zuzki Trabajando, Arte realizado por @AlwaysAlele"
+         height="479"
+         ngSrc="/https://cdn.zuzki.dev/images/zuzki-icon/zuzki-icon-460.webp"
+         placeholder
+         priority
+         width="460"
+    />
 
     <div class="flex flex-row flex-wrap gap-5">
       <div class="w-full text-5xl">
