Add new dependencies and enhancements for images with priority and placeholder attributes
This commit introduces new dependencies to the project and improves image rendering in About page templates with priority and placeholder attributes to optimize performance. Dependencies enhance functionality and integration across the project.

---

### [Pnpm-Lock]
- Added multiple new dependencies for project improvement.
  - Included `source-map-explorer`, `async`, `btoa`, `gzip-size`, `is-docker`, `is-wsl`, `jake`, `minimatch`, `open`, `temp`.
  - Enhanced dependency tree resolution to support related packages.

### [About.Feature]
- Improved image loading using `priority` and `placeholder` attributes.
  - Updated Zuzki Working image and reference sheet image for better performance.
  - Enhanced user experience with optimized image rendering.

### [Package]
- Added `source-map-explorer` as a new dev dependency.

Signed-off-by: Zuzki <sleepy@zuzki.dev>

--- a/src/app/features/about/about.feature.html
+++ b/src/app/features/about/about.feature.html
@@ -3,6 +3,8 @@
     <img alt="Zuzki Trabajando, Arte realizado por @AlwaysAlele"
          height="280"
          ngSrc="/https://cdn.zuzki.dev/images/zuzki-working/zuzki-working-1920.webp"
+         placeholder
+         priority
          width="460"/>
     <div>
       <h1 class="text-5xl mb-2">Sobre Mi</h1>
@@ -25,8 +27,9 @@
 
   <section class="mb-10">
     <h2 class="text-4xl mb-2">Hoja de referencia</h2>
-    <img [priority]="true"
-         alt="Hoja de personaje de Zuzki, Arte realizado por @Toraberaaa"
+    <img alt="Hoja de personaje de Zuzki, Arte realizado por @Toraberaaa"
+         placeholder
+         priority
          height="934"
          ngSrc="/https://cdn.zuzki.dev/images/zuzki-sheet/zuzki-sheet-1920.webp"
          width="1920"
