Enhance link components for improved external link handling and ensure clarity in Footer and Link components functionality.
Refactored the Footer and Link components to improve the external link logic. Updated input properties for clarity and streamlined dependency imports. Improved the maintainability and readability of the code.

---

# [FooterComponent]

Updated link-related properties and removed unnecessary dependencies.
- Adjusted link component usage to handle external icon properties directly.
- Removed `FaIconComponent` from imports as it is no longer required.
- Applied consistent external icon logic across all links.
- Improved the readability of HTML with updated attribute alignment.
- Maintained flexibility in external links through scalable parameters.

# [LinkComponent]

Enhanced input structure to better define external link properties.
- Renamed and updated inputs like `href` to `pageRef` for semantic clarity.
- Introduced `externalIconSize` input for configurable external icon sizes.
- Simplified `isExternal` determination logic to use `pageRef` over `href`.
- Implemented the `@if` directive in the template for concise component rendering.
- Updated dependencies with necessary additions and removed redundancies.

Signed-off-by: Zuzki <sleepy@zuzki.dev>

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -5,14 +5,20 @@
         © 2025 Sleepy Zuzki. Todos los derechos reservados.
       </p>
       <div class="flex gap-4 mt-4 md:mt-0">
-        <app-link [showExternalIcon]="false" href="https://github.com/sleepy-zuzki">
-          <fa-icon [icon]="faGithub" size="2xl"/>
+        <app-link [externalIcon]="faGithub"
+                  [pageRef]="'https://github.com/sleepy-zuzki'"
+                  [showExternalIcon]="true"
+                  externalIconSize="2xl">
         </app-link>
-        <app-link [showExternalIcon]="false" href="https://twitch.tv/sleepy_zuzki">
-          <fa-icon [icon]="faTwitch" size="2xl"/>
+        <app-link [externalIcon]="faTwitch"
+                  [pageRef]="'https://twitch.tv/sleepy_zuzki'"
+                  [showExternalIcon]="true"
+                  externalIconSize="2xl">
         </app-link>
-        <app-link [showExternalIcon]="false" href="https://x.com/sleepy_zuzki">
-          <fa-icon [icon]="faXTwitter" size="2xl"/>
+        <app-link [externalIcon]="faXTwitter"
+                  [pageRef]="'https://x.com/sleepy_zuzki'"
+                  [showExternalIcon]="true"
+                  externalIconSize="2xl">
         </app-link>
       </div>
     </div>
