--- a/src/app/features/about/about.feature.html
+++ b/src/app/features/about/about.feature.html
@@ -38,7 +38,7 @@
 
   <section class="flex flex-col gap-2">
     <h2 class="text-4xl mb-2">Trabajos</h2>
-    @for (project of projects; track project.id) {
+    @for (project of projects(); track project.id) {
       <app-project-card
         class="w-full"
         [project]="project"
