--- a/src/app/features/works/details/work-details.component.html
+++ b/src/app/features/works/details/work-details.component.html
@@ -9,7 +9,7 @@
   <iframe #streamerView class="w-full h-full"></iframe>
 </section>
 
-<dialog #layoutsMenuDialog>
+<dialog #layoutsMenuDialog class="bg-sleepy-light-bg-primary dark:bg-sleepy-dark-bg-primary">
   <div class="flex justify-between items-center mb-4 border-b border-b-sleepy-light-border dark:border-b-sleepy-dark-border">
     <h2 class="text-xl font-bold">Menú</h2>
     <button (click)="closeLayoutsMenu()" aria-label="Cerrar menú" class="p-2">✖</button>
@@ -19,7 +19,7 @@
     @for (layout of getOverlayLayouts(); track layout.id) {
       <div
         (click)="changeLayout(layout.id)"
-        class="shadow-md cursor-pointer rounded">
+        class="shadow-md cursor-pointer rounded bg-sleepy-light-bg-surface dark:bg-sleepy-dark-bg-surface">
         <img [src]="layout.preview" class="rounded-t" height="100" slot="image" alt="Placeholder"/>
         <p class="p-4"><b>{{ layout.name }}</b></p>
       </div>
